--- a/netlify.toml
+++ b/netlify.toml
@@ -1,13 +1,3 @@
-[images]
-remote_images = [
-  "https://source.unsplash.com/.*",
-  "https://images.unsplash.com/.*",
-  "https://ext.same-assets.com/.*",
-  "https://ugc.same-assets.com/.*"
-]
-
 [build]
 command = "npm run build"
-
-[[plugins]]
-package = "@netlify/plugin-nextjs"
+publish = "out"
